Beginning of graph structure.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@ Sofia, Bulgaria
     </string>
     <string name="help_text">
     </string>
+    <string name="game_not_started_text">Game not started!</string>
 </resources>
 
